CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(tizenclaw-assets VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(APP_DATA_DIR "/opt/usr/share/tizenclaw" CACHE STRING "App data directory")
SET(OCR_CLI_DIR "/opt/usr/share/tizen-tools/cli/tizenclaw-ocr")

## Detect architecture
IF(NOT DEFINED TIZENCLAW_ARCH)
  SET(TIZENCLAW_ARCH "${CMAKE_SYSTEM_PROCESSOR}")
ENDIF()

## OCR model selection (lite = Korean+English, full = CJK)
IF(NOT DEFINED OCR_MODEL)
  SET(OCR_MODEL "lite")
ENDIF()

## ONNX Runtime paths
SET(ORT_LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/${TIZENCLAW_ARCH}")
SET(ORT_RUNTIME_DIR "${APP_DATA_DIR}/lib")
SET(ORT_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")

## ── OCR Library and CLI binary ────────────────────────────
ADD_LIBRARY(tizenclaw-ocr SHARED src/tizenclaw_ocr_lib.cc)
TARGET_INCLUDE_DIRECTORIES(tizenclaw-ocr PRIVATE ${ORT_INCLUDE_DIR})
TARGET_LINK_DIRECTORIES(tizenclaw-ocr PRIVATE ${ORT_LIB_DIR})
TARGET_LINK_LIBRARIES(tizenclaw-ocr onnxruntime)
SET_TARGET_PROPERTIES(tizenclaw-ocr PROPERTIES
  INSTALL_RPATH "${ORT_RUNTIME_DIR}"
  BUILD_WITH_INSTALL_RPATH TRUE)

ADD_EXECUTABLE(tizenclaw-ocr-cli src/tizenclaw_ocr_cli.cc)
TARGET_INCLUDE_DIRECTORIES(tizenclaw-ocr-cli PRIVATE ${ORT_INCLUDE_DIR})
TARGET_LINK_DIRECTORIES(tizenclaw-ocr-cli PRIVATE ${ORT_LIB_DIR})
TARGET_LINK_LIBRARIES(tizenclaw-ocr-cli tizenclaw-ocr)
SET_TARGET_PROPERTIES(tizenclaw-ocr-cli PROPERTIES OUTPUT_NAME "tizenclaw-ocr"
  INSTALL_RPATH "${ORT_RUNTIME_DIR}"
  BUILD_WITH_INSTALL_RPATH TRUE)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(TIZEN_DEPS REQUIRED ecore ecore-wl2 screen_connector_watcher libtbm aul)

ADD_EXECUTABLE(tizenclaw-screen-perceptor src/screen_perceptor_cli.cc)
TARGET_INCLUDE_DIRECTORIES(tizenclaw-screen-perceptor PRIVATE ${ORT_INCLUDE_DIR} ${TIZEN_DEPS_INCLUDE_DIRS})
TARGET_LINK_DIRECTORIES(tizenclaw-screen-perceptor PRIVATE ${ORT_LIB_DIR} ${TIZEN_DEPS_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(tizenclaw-screen-perceptor tizenclaw-ocr ${TIZEN_DEPS_LIBRARIES})
SET_TARGET_PROPERTIES(tizenclaw-screen-perceptor PROPERTIES
  INSTALL_RPATH "${ORT_RUNTIME_DIR}"
  BUILD_WITH_INSTALL_RPATH TRUE)

INSTALL(TARGETS tizenclaw-ocr DESTINATION "${APP_DATA_DIR}/lib")
INSTALL(TARGETS tizenclaw-ocr-cli DESTINATION ${OCR_CLI_DIR})
INSTALL(TARGETS tizenclaw-screen-perceptor DESTINATION "/opt/usr/share/tizen-tools/tizenclaw-screen-perceptor")
INSTALL(FILES include/tizenclaw_ocr_api.h DESTINATION "${APP_DATA_DIR}/include")
INSTALL(FILES res/tool.md DESTINATION ${OCR_CLI_DIR})

## ── ONNX Runtime (arch-specific) ──────────────
FILE(GLOB ORT_LIBS "${ORT_LIB_DIR}/libonnxruntime.so*")
IF(ORT_LIBS)
  INSTALL(FILES ${ORT_LIBS} DESTINATION "${APP_DATA_DIR}/lib")
ENDIF()

## ── RAG databases ─────────────────────────────
FILE(GLOB RAG_DB_FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/rag/*.db")
IF(RAG_DB_FILES)
  INSTALL(FILES ${RAG_DB_FILES} DESTINATION "${APP_DATA_DIR}/rag")
ENDIF()

## ── Embedding model ───────────────────────────
INSTALL(FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/data/models/all-MiniLM-L6-v2/model.onnx"
  "${CMAKE_CURRENT_SOURCE_DIR}/data/models/all-MiniLM-L6-v2/vocab.txt"
  DESTINATION "${APP_DATA_DIR}/models/all-MiniLM-L6-v2"
  OPTIONAL)

## ── OCR models (det is always the same) ───────
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/models/ppocr/det.onnx"
  DESTINATION "${APP_DATA_DIR}/models/ppocr")

## Install correct rec model based on OCR_MODEL option
IF(OCR_MODEL STREQUAL "full")
  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/models/ppocr/rec_full.onnx"
    DESTINATION "${APP_DATA_DIR}/models/ppocr" RENAME "rec.onnx")
  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/models/ppocr/ppocr_keys_full.txt"
    DESTINATION "${APP_DATA_DIR}/models/ppocr" RENAME "ppocr_keys.txt")
ELSE()
  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/models/ppocr/rec_lite.onnx"
    DESTINATION "${APP_DATA_DIR}/models/ppocr" RENAME "rec.onnx")
  INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/data/models/ppocr/ppocr_keys_lite.txt"
    DESTINATION "${APP_DATA_DIR}/models/ppocr" RENAME "ppocr_keys.txt")
ENDIF()
